# mariopaint

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.local.json
include/mp/: cpu_ops.h  functions.h
src/main/: main.c
src/recomp/: mp_audio.c  mp_bank01.c  mp_boot.c  mp_canvas.c  mp_draw.c  mp_gamelogic.c  mp_gfxinit.c  mp_helpers.c  mp_input.c  mp_interact.c  mp_misc.c  mp_shapes.c  mp_sprites.c  mp_title.c  mp_titleloop.c  mp_tools.c
